Fixed BranchScreen jump bug Tap to expand opts in BranchScreen Blue stars Consolidate BranchScreen button and text Demarcate job role levels by lines

--- a/src/frontend/src/style/index.less
+++ b/src/frontend/src/style/index.less
@@ -79,6 +79,7 @@ hr{
 }
 
 .take_test_prompt{
+    margin-top:80px;
     text-align:center;
 
     h1{
@@ -95,8 +96,6 @@ hr{
         cursor: pointer;
         font-size: 2em;
         font-weight:bold;
-        height: 5em;
-        line-height: 6em;
         padding-top:1.5em;
         padding-bottom:1.5em;
         padding-left:2em;
@@ -105,6 +104,9 @@ hr{
         margin-bottom: 1.0rem;
         border: 1px solid;
         border-radius: @border_radius;
+        display:block;
+        /*height: 5em;*/
+        /*line-height: 6em;*/
     }
 }
 
@@ -112,6 +114,10 @@ hr{
     margin-top: 100px;
 	margin-bottom: 50px;
     text-align:center;
+
+    .toggle{
+        display:none;
+    }
 
     .answer{
         -webkit-touch-callout: none;
@@ -289,6 +295,17 @@ hr{
 .role_picker{
     .question{
         margin-top:0;
+        .level_block{
+            /*background-color:#efefef;*/
+            /*border-radius:@border_radius;*/
+            border-top:solid 1px;
+            padding-top:30px;
+            padding-bottom:60px;
+        }
+        .level_block:first-of-type{
+            border:none;
+            padding-top:0;
+        }
     }
 
     .level{
@@ -371,6 +388,10 @@ hr{
 }
 
 .results {
+    .stars{
+        color:@sal_blue;
+    }
+
     .competencies{
         table{
             margin:auto;
@@ -442,7 +463,7 @@ hr{
             height: initial;
         }
     }
-            
+
     .question {
         .role_option_text{
             font-size:0.8em;
@@ -451,6 +472,13 @@ hr{
         .answer{
             padding-top:0.3em;
             padding-bottom:0.3em;
+        }
+
+        .goals{
+            display:none;
+        }
+        .show{
+            display:initial;
         }
     }
 
@@ -462,9 +490,14 @@ hr{
         }
     }
 
+    .take_test_prompt{
+        margin-top:15px;
+    }
+
     .take_test_prompt .take_test_button{
         padding: 0.9em 1.2em;
-        line-height:3.5em;
+        /*line-height:3.5em;*/
+        font-size:1.5em;
     }
 
     .scroll_down_msg{
@@ -545,6 +578,20 @@ hr{
     }
 
     .question{
+        .no_toggle{
+            display:none;
+        }
+        .toggle{
+            cursor:pointer;
+            display:inline-block;
+            .toggle_arrow{
+                color:@sal_blue;
+            }
+            p{
+                margin-bottom:0;
+            }
+        }
+
         margin-top: 10px;
 
         h1{
